# AI-Roadmap

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
datasets/03-titanic-survival-prediction/: README.md
datasets/08-stock-price-predictor/: README.md
datasets/09-build-your-own-neural-network/: README.md
datasets/12-recommendation-system/: README.md
datasets/12-recommendation-system/src/: model.py
datasets/16-image-generation-gans/: README.md
datasets/17-multilanguage-nlp-pipeline/: README.md
datasets/21-mlops-pipeline/: README.md
datasets/22-distributed-ml-system/: README.md
projects/01-exploratory-data-analysis/: README.md
projects/02-iris-flower-classification/: README.md
projects/04-build-your-own-linear-regression/: README.md
projects/05-housing-price-predictor/: README.md
projects/06-sentiment-analysis-system/: README.md
projects/07-customer-churn-predictor/: README.md
projects/10-image-classification-system/: README.md
projects/11-real-time-face-recognition/: README.md
projects/12-recommendation-system/src/: preprocessing.py
projects/13-automated-ml-pipeline/: README.md
projects/14-language-model-from-scratch/: README.md
projects/15-a-b-testing-framework/: README.md
projects/18-reinforcement-learning-game/: README.md
projects/19-real-time-fraud-detection/: README.md
projects/20-build-your-own-automl/: README.md
scripts/: download_dataset.py
scripts/data_manager/: downloader.py
scripts/data_manager/config/: datasets.py
scripts/data_manager/sources/: base.py  kaggle_source.py  keras_source.py  sklearn_source.py  url_source.py
